--- a/app/scripts/views/kasittelija/suunnittelu.html
+++ b/app/scripts/views/kasittelija/suunnittelu.html
@@ -54,7 +54,7 @@
             <th>Haettu avustus</th>
             <th>Muutos</th>
             <th>Myönnettävä avustus</th>
-            <th>Päätös</th>
+            <th><span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span></th>
           </tr>
           </thead>
           <tbody>
