--- a/app/scripts/views/hakemus/index.html
+++ b/app/scripts/views/hakemus/index.html
@@ -259,10 +259,10 @@
         Olen liittänyt hakemukseen tarvittavat lisätiedot mukaanlukien liitteen allekirjoitusoikeudesta.
       </juku-confirmation>
 
-      <juku-controls>
 
         <!-- Hakija -->
-        <juku-controls-buttons ng-show="isHakija(user)">
+      <juku-controls ng-show="isHakija(user)">
+        <juku-controls-buttons>
           <button
             ng-disabled="!hakemusTallentaminenEnabled()"
             data-ng-click="tallennaHakemus(lisatoiminto.EI)"
@@ -291,34 +291,34 @@
                ng-if="!hakemusLahettaminenEnabled()"></div>
           </button>
         </juku-controls-buttons>
+      </juku-controls>
 
-        <!-- Käsittelijä -->
-        <juku-controls ng-show="sallittu('kasittely-hakemus')">
-          <juku-controls-buttons>
-            <button ng-show="hakemusVireilla()"
-                    juku-taydennysdialogi hakemusid="{{hakemusid}}" tyyppi="{{hakemus.hakemustyyppitunnus}}"
-                    class="btn btn-danger">
-              Palauta täydennettäväksi
-            </button>
-            <button ng-show="hakemusVireilla()"
-                    juku-varmistusdialogi varmistusotsake="Hakemuksen tarkastaminen"
-                    varmistusteksti="Oletko varma, että haluat merkitä hakemuksen tarkastetuksi? Hakemuksen tarkastettu-merkintää ei ole mahdollista peruuttaa ja hakemuksen sisältöä ei ole mahdollista muuttaa tarkastamisen jälkeen."
-                    operaatio="tarkastaHakemus()"
-                    class="btn btn-success">
-              Merkitse tarkastetuksi
-            </button>
-            <button ng-hide="hakemusVireilla()"
-                    data-ng-click="taydennyspyynto()"
-                    class="btn btn-danger" disabled>
-              Palauta täydennettäväksi
-            </button>
-            <button ng-hide="hakemusVireilla()"
-                    data-ng-click="tarkastaHakemus()"
-                    class="btn btn-success" disabled>
-              Merkitse tarkastetuksi
-            </button>
-          </juku-controls-buttons>
-        </juku-controls>
+      <!-- Käsittelijä -->
+      <juku-controls ng-show="sallittu('kasittely-hakemus')">
+        <juku-controls-buttons>
+          <button ng-show="hakemusVireilla()"
+                  juku-taydennysdialogi hakemusid="{{hakemusid}}" tyyppi="{{hakemus.hakemustyyppitunnus}}"
+                  class="btn btn-danger">
+            Palauta täydennettäväksi
+          </button>
+          <button ng-show="hakemusVireilla()"
+                  juku-varmistusdialogi varmistusotsake="Hakemuksen tarkastaminen"
+                  varmistusteksti="Oletko varma, että haluat merkitä hakemuksen tarkastetuksi? Hakemuksen tarkastettu-merkintää ei ole mahdollista peruuttaa ja hakemuksen sisältöä ei ole mahdollista muuttaa tarkastamisen jälkeen."
+                  operaatio="tarkastaHakemus()"
+                  class="btn btn-success">
+            Merkitse tarkastetuksi
+          </button>
+          <button ng-hide="hakemusVireilla()"
+                  data-ng-click="taydennyspyynto()"
+                  class="btn btn-danger" disabled>
+            Palauta täydennettäväksi
+          </button>
+          <button ng-hide="hakemusVireilla()"
+                  data-ng-click="tarkastaHakemus()"
+                  class="btn btn-success" disabled>
+            Merkitse tarkastetuksi
+          </button>
+        </juku-controls-buttons>
       </juku-controls>
 
       <juku-navigation-links>
