LIVIJUKU-403 - muokkausaikajen muutos. Muokkausaika tarkoittaa nyt 1) hakemuksen sisältötietojen muokkausaikaa (palvelu: get hakemus/:hakemusid) 2) hakemuksen sisältötietojen ja perustietojen viimeisintä muokkausaikaa (palvelu: get hakemuskaudet). Lisäksi käsittelijän nimi palautetaan vain niissä palveluissa joissa sitä tarvitaan

--- a/app/scripts/views/kasittelija/hakemukset.html
+++ b/app/scripts/views/kasittelija/hakemukset.html
@@ -70,7 +70,7 @@
                       </td>
                       <td>{{hakemus.muokkausaika | date:'dd.MM.yyyy HH:mm:ss'}}</td>
                       <td>{{hakemus.diaarinumero}}</td>
-                      <td>{{hakemus.kasittelijanimi}}</td>
+                      <td>{{hakemus.kasittelijanimi ? hakemus.kasittelijanimi : "Ei määritelty"}}</td>
                     </tr>
                     </tbody>
                   </table>
