--- a/app/scripts/components/liiteLataus/index.html
+++ b/app/scripts/components/liiteLataus/index.html
@@ -5,14 +5,13 @@
   <div class="panel-body">
     <div ng-show="(hakemusKeskenerainen() && sallittu('modify-oma-hakemus'))">
       <div class="col-md-12">
-        <div ngf-drop ng-model="myFiles" class="drop-box"
+        <div ngf-drop="uploadFiles($files)" class="drop-box"
              ngf-drag-over-class="{accept:'dragover', reject:'dragover-err', delay:100}"
              ngf-multiple="true" ngf-allow-dir="false" ngf-drop-available="dropAvailable">
           <p ng-show="dropAvailable">Raahaa liite tähän tai</p>
 
           <p ng-hide="dropAvailable">Tiedoston raahaaminen ei ole mahdollista tällä selain-versiolla</p>
-
-          <button ngf-select class="btn btn-primary" ng-model="myFiles" ngf-multiple="true">Valitse
+          <button class="btn btn-primary" ngf-select ngf-change="uploadFiles($files)">Valitse
             tiedosto
           </button>
         </div>
@@ -25,9 +24,9 @@
           <div ng-show="hakemusKeskenerainen()">
             <div ng-show="liite.liitenumero !== editoitavaLiite">
               <juku-icon-link ng-show="isPdf(liite.nimipaate)"
-                href="{{getLiitePdf(hakemusid,liite.liitenumero)}}"
-                target="_blank"
-                icon="file">
+                              href="{{getLiitePdf(hakemusid,liite.liitenumero)}}"
+                              target="_blank"
+                              icon="file">
                 {{liite.nimiteksti}}.{{liite.nimipaate}}
               </juku-icon-link>
               <juku-icon-link ng-hide="isPdf(liite.nimipaate)"
@@ -104,10 +103,12 @@
             </div>
           </div>
           <div ng-hide="hakemusKeskenerainen() && sallittu('modify-oma-hakemus')">
-            <juku-icon-link ng-show="isPdf(liite.nimipaate)" icon="file" href="{{getLiitePdf(hakemusid,liite.liitenumero)}}" target="_blank">
+            <juku-icon-link ng-show="isPdf(liite.nimipaate)" icon="file"
+                            href="{{getLiitePdf(hakemusid,liite.liitenumero)}}" target="_blank">
               {{liite.nimi}} ({{liite.contenttype}})
             </juku-icon-link>
-            <juku-icon-link ng-hide="isPdf(liite.nimipaate)" icon="file" href="api/hakemus/{{hakemusid}}/liite/{{liite.liitenumero}}" target="_blank">
+            <juku-icon-link ng-hide="isPdf(liite.nimipaate)" icon="file"
+                            href="api/hakemus/{{hakemusid}}/liite/{{liite.liitenumero}}" target="_blank">
               {{liite.nimi}} ({{liite.contenttype}})
             </juku-icon-link>
           </div>
