LIVIJUKU-423 Hakemusten tila -labeleihin värimuutokset

--- a/app/styles/styles.styl
+++ b/app/styles/styles.styl
@@ -104,25 +104,25 @@ textarea
   display: none !important
 
 .hakemus-tila-eikaynnissa
-  background-color: #777
+  background-color: #969696
 
 .hakemus-tila-keskenerainen
-  background-color: #f0ad4e
+  background-color: #ffaa00
 
 .hakemus-tila-vireilla
-  background-color: #337ab7
+  background-color: #0088cc
 
 .hakemus-tila-taydennettavana
-  background-color: #f0ad4e
+  background-color: #ffaa00
 
 .hakemus-tila-taydennetty
-  background-color: #337ab7
+  background-color: #0088cc
 
 .hakemus-tila-tarkastettu
-  background-color: #337ab7
+  background-color: #0088cc
 
 .hakemus-tila-paatetty
-  background-color: #5cb85c
+  background-color: #00bb00
 
 .hakemus-tila-maksettu
   background-color: #5cb85c
