LIVIJUKU-439 Hakemuksen liitetiedostojen yhteenlaskettu koko on 0 Bytes, kun liittteitä lisätään.

--- a/app/scripts/views/hakemus/index.html
+++ b/app/scripts/views/hakemus/index.html
@@ -214,7 +214,7 @@
     <!-- Käsittelijä ja Hakija (toisen organisaation hakemus) -->
     <div ng-show="(!isHakija(user) || (isHakija(user) && !isOmaHakemus(user))) && hakemus.contentvisible">
       <div ng-show="onAvustushakemus()">
-        <h5>Lisätietoja avustusten kohteista</h5>
+        <h3>LISÄTIETOJA AVUSTUSTEN KOHTEISTA</h3>
       </div>
 
       <div ng-hide="onAvustushakemus()">
