LIVIJUKU-373 (CSS) Taulukoihin, joiden rivit ovat linkkejä, "cursor: pointer" (on hover)

--- a/app/styles/styles.styl
+++ b/app/styles/styles.styl
@@ -236,6 +236,10 @@ textarea
 .st-sort-descent:after
   content: '\25BC'
 
+.table-hover tr {
+  cursor: pointer;
+}
+
 .ui-grid-header-cell .ui-grid-cell-contents
   height: 48px
   white-space: normal
