LIVIJUKU-398 Seurantalomake demo

--- a/app/scripts/components/seurantalomakePaikallisliikenne/index.html
+++ b/app/scripts/components/seurantalomakePaikallisliikenne/index.html
@@ -3,12 +3,12 @@
     <div class="table-responsive">
       <table class="table table-bordered table-hover table-condensed">
         <tr>
-          <th>Linjan numero tai nimi</th>
           <th>
             <div tooltip="Valitse linja-, sopimus- tai kokonaissuorite" tooltip-placement="top"
                  tooltip-append-to-body="true">Suoritetyyppi<span class="glyphicon glyphicon-question-sign"></span>
             </div>
           </th>
+          <th>Suoritteen nimi</th>
           <th>
             <div tooltip="Linja-autojen lukumäärä" tooltip-placement="top"
                  tooltip-append-to-body="true">Linja-autot<span class="glyphicon glyphicon-question-sign"></span></div>
@@ -18,23 +18,27 @@
                  tooltip-append-to-body="true">Taksit<span class="glyphicon glyphicon-question-sign"></span></div>
           </th>
           <th>
-            <div tooltip="Varsinaisen paikallisliikenteen ajokilometrit"
+            <div tooltip="Paikallisliikenteen ajokilometrit"
                  tooltip-append-to-body="true">Ajokilometrit<span class="glyphicon glyphicon-question-sign"></span>
             </div>
           </th>
           <th>
-            <div tooltip="Varsinaisen paikallisliikenteen matkustajamäärät" tooltip-placement="top"
-                 tooltip-append-to-body="true">Matkustajat<span class="glyphicon glyphicon-question-sign"></span>
+            <div tooltip="Paikallisliikenteen matkustajamäärä" tooltip-placement="top"
+                 tooltip-append-to-body="true">Matkustaja-määrä<span class="glyphicon glyphicon-question-sign"></span>
             </div>
           </th>
-          <th>Asiakastulo</th>
           <th>
-            <div tooltip="Kunnan/kaupungin liikennöitsijöille maksama hinta, sisältää valtionavun"
+            <div tooltip="Saadut matkalipputulot" tooltip-placement="top"
+                 tooltip-append-to-body="true">Lipputulo<span class="glyphicon glyphicon-question-sign"></span>
+            </div>
+          </th>
+          <th>
+            <div tooltip="Kaupungin liikennöitsijöille maksama hinta, sisältää valtionavun"
                  tooltip-placement="top"
                  tooltip-append-to-body="true">Nettohinta<span class="glyphicon glyphicon-question-sign"></span></div>
           </th>
           <th>
-            <div tooltip="Asiakastulo + nettohinta" tooltip-placement="top"
+            <div tooltip="Lipputulo + nettohinta" tooltip-placement="top"
                  tooltip-append-to-body="true">Bruttohinta<span class="glyphicon glyphicon-question-sign"></span></div>
           </th>
           <th></th>
@@ -50,7 +54,7 @@
             <td>{{taksitSumma() | currency : '' : 0}}</td>
             <td>{{ajokmSumma() | currency : 'km'}}</td>
             <td>{{matkustajatSumma() | currency : '' : 0}}</td>
-            <td>{{asiakastuloSumma() | currency}}</td>
+            <td>{{lipputuloSumma() | currency}}</td>
             <td>{{nettohintaSumma() | currency}}</td>
             <td>{{bruttohintaSumma() | currency}}</td>
             <td></td>
@@ -58,14 +62,14 @@
         </tfoot>
         <tbody>
           <tr ng-repeat="rivi in paikallisliikennedata track by $index">
-            <td><input name="linja" type="text" class="form-control" noenter
-                       select-on-click
-                       ng-model="rivi.linja"></td>
             <td><select name="suoritetyyppi" ng-model="rivi.suoritetyyppi">
               <option value="0">Linjasuorite</option>
               <option value="1">Sopimussuorite</option>
               <option value="2">Kokonaissuorite</option>
             </select></td>
+            <td><input name="nimi" type="text" class="form-control" noenter
+                       select-on-click
+                       ng-model="rivi.nimi"></td>
             <td><input name="linjaautot" type="text" class="form-control" numeric-integer-only="" select-on-click
                        ng-model="rivi.linjaautot"></td>
             <td><input name="taksit" type="text" class="form-control" numeric-integer-only="" select-on-click
@@ -77,16 +81,15 @@
             <td><input name="matkustajamaarat" type="text" class="form-control" numeric-integer-only="" noenter
                        select-on-click
                        ng-model="rivi.matkustajamaarat"></td>
-            <td><input name="asiakastulo" type="text" class="form-control" ng-currency="" numeric-only="" noenter
+            <td><input name="lipputulo" type="text" class="form-control" ng-currency="" numeric-only="" noenter
                        select-on-click
-                       ng-model="rivi.asiakastulo"></td>
+                       ng-model="rivi.lipputulo"></td>
             <td><input name="nettohinta" type="text" class="form-control" ng-currency="" numeric-only="" noenter
                        select-on-click
                        ng-model="rivi.nettohinta"></td>
-            <td><input name="bruttohinta" type="text" class="form-control" ng-currency="" numeric-only="" noenter
-                       select-on-click
-                       ng-model="rivi.bruttohinta"></td>
-            <td><a href="" ng-click="poistaPaikallisliikenneRivi($index)"><span class="glyphicon glyphicon-remove-sign"></span></a>
+            <td>{{laskeBruttohinta($index) | currency}}</td>
+            <td><a href="" ng-click="poistaPaikallisliikenneRivi($index)"><span
+              class="glyphicon glyphicon-remove-sign"></span></a>
             </td>
           </tr>
         </tbody>
