--- a/app/scripts/components/seurantalomakePaikallisliikenne/index.styl
+++ b/app/scripts/components/seurantalomakePaikallisliikenne/index.styl
@@ -18,3 +18,14 @@
   span.glyphicon-remove-sign
     font-size: 2em
     color:colors.red
+  .panel .panel-heading
+    background-color:#ffffff
+    border: 1px solid #ddd
+  .panel .panel-heading .ng-scope
+    border:0
+    padding: 0px 0px
+  .panel .panel-body
+    border: 1px solid #ddd
+    padding: 0px
+  .table-responsive
+    padding: 5px 15px
