LIVIJUKU-398 Seurantalomake demo

--- a/app/styles/_components.styl
+++ b/app/styles/_components.styl
@@ -37,4 +37,5 @@
 @import '../scripts/components/navigationLinks'
 @import '../scripts/components/confirmation'
 @import '../scripts/components/seurantalomakePaikallisliikenne'
+@import '../scripts/components/seurantalomakePalveluliikenne'
 @import '../scripts/components/seurantalomakeSeutulippu'
