--- a/app/scripts/views/yhteinen/seurantalomakeDemo.html
+++ b/app/scripts/views/yhteinen/seurantalomakeDemo.html
@@ -3,6 +3,9 @@
     <juku-seurantalomake-paikallisliikenne></juku-seurantalomake-paikallisliikenne>
   </div>
   <div class="row">
+    <juku-seurantalomake-palveluliikenne></juku-seurantalomake-palveluliikenne>
+  </div>
+  <div class="row">
     <div class="col-md-12">
       <h3>Seutulippu</h3>
       <juku-seurantalomake-seutulippu></juku-seurantalomake-seutulippu>
